fix align center and size

--- a/style.css
+++ b/style.css
@@ -8,16 +8,21 @@ body{
     flex-direction: row;
 }
 
+
 #twitter{
     -webkit-tap-highlight-color: transparent;
     width: 100%;
     max-width: 200px;
     display: flex;
     justify-content: center;
-    position: absolute;
     top: 7%;
-    left: 44.65%;
     z-index: 2;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
 
 }
 
@@ -27,10 +32,14 @@ body{
     max-width: 200px;
     display: flex;
     justify-content: center;
-    position: absolute;
     top: 43%;
-    left: 44.65%;
     z-index: 2;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
 
 #poem{
@@ -39,10 +48,14 @@ body{
     max-width: 200px;
     display: flex;
     justify-content: center;
-    position: absolute;
     top: 74%;
-    left: 44.65%;
     z-index: 2;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
 
 #con1{
@@ -66,6 +79,62 @@ justify-content: center;
 height: 34vh;
 }
 
+#blueLetter{
+    width: 30%;
+    height: 65%;
+    background-color: #0C6BB3;
+    position: absolute;
+    top: 30%;
+    border-radius: 25px;
+    left:0;
+    right: 0;
+    margin-left: auto;
+    text-align: center;
+    justify-content: center;
+    margin-right: auto;
+    border-radius: 25px;
+    opacity: 0;
+    z-index: 1;
+}
+
+#pinkLetter{
+    width: 30%;
+    height: 65%;
+    background-color: #DE78AB;
+    position: absolute;
+    top: 30%;
+    border-radius: 25px;
+    left:0;
+    right: 0;
+    margin-left: auto;
+    text-align: center;
+    justify-content: center;
+    margin-right: auto;
+    border-radius: 25px;
+    opacity: 0;
+    z-index: 1;
+}
+
+#yellowLetter{
+    width: 30%;
+    height: 65%;
+    background-color: #FFB84D;
+    position: absolute;
+    top: 30%;
+    left:0;
+    right: 0;
+    margin-left: auto;
+    text-align: center;
+    justify-content: center;
+    margin-right: auto;
+    border-radius: 25px;
+    opacity: 0;
+    z-index: 1;
+}
+
+
+
+
 
 #twitter{cursor: pointer;}
 
@@ -76,24 +145,21 @@ height: 34vh;
 @media all and (max-width:376px){
     #twitter{
         position: absolute;
-        top: 7%;
-        left: 30%;
+        top: 5%;
         width: 40%;
 
     }
     
     #cloud{
         position: absolute;
-        top: 43%;
-        left: 30%;
+        top: 40%;
         width: 40%;
 
     }
 
     #poem{
         position: absolute;
-        top: 74%;
-        left: 30%;
+        top: 73%;
         width: 40%;
 
     }
@@ -101,38 +167,14 @@ height: 34vh;
 
 #blueLetter{
     width: 90%;
-    height: 62%;
-    background-color: #0C6BB3;
-    position: absolute;
-    top: 30%;
-    left: 5%;
-    border-radius: 25px;
-    opacity: 0;
-    z-index: 1;
 }
 
 #pinkLetter{
     width: 90%;
-    height: 62%;
-    background-color: #DE78AB;
-    position: absolute;
-    top: 30%;
-    left: 5%;
-    border-radius: 25px;
-    opacity: 0;
-    z-index: 1;
 }
 
 #yellowLetter{
     width: 90%;
-    height: 62%;
-    background-color: #FFB84D;
-    position: absolute;
-    top: 30%;
-    left: 5%;
-    border-radius: 25px;
-    opacity: 0;
-    z-index: 1;
 }
 
 p{
